# chip8-emu-rust

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml
src/: chip8.rs  main.rs
src/chip8/: display.rs  sprites.rs
