[package]
name = "chip8-emu-rust"
version = "1.0.0"
license = "MIT"
description = "A CHIP-8 emulator"
keywords = ["chip-8", "emulator", "sdl2"]
repository = "https://github.com/alberto-re/chip8-emu-rust"
edition = "2021"

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
rand = "0.8.5"
rodio = "0.17.1"
sdl2 = "0.35.2"
